# century_journey

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  LICENSE_ASSETS.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml  rust.yml
LICENSES/: CJAL-1.0.md  MOD-SDK-MIT.txt  README.md  THIRD_PARTY_NOTICES.md
assets/fonts/: README.md
docs/: CODE_STYLE.md  PERFORMANCE_BASELINE.md  PROJECT_STRUCTURE.md  content-format.md
src/: lib.rs  main.rs  test_setup.rs
src/app/: application.rs  config.rs  exit.rs  flow.rs  input_block.rs  launcher.rs  mod.rs  mode.rs  plugin.rs  schedule.rs  settings.rs  startup.rs  state.rs
src/client/: interpolation.rs  mod.rs  performance.rs  plugin_group.rs  presentation.rs
src/content/: format.rs  lifecycle.rs  mod.rs  validation.rs
src/core/: constant.rs  input_block.rs  mod.rs
src/editor/: mod.rs
src/engine/: mod.rs  persistence.rs
src/game/: mod.rs  simulation.rs
src/gameplay/: block_action.rs  gamemode.rs  mod.rs
src/inventory/: cursor.rs  events.rs  insert.rs  interaction.rs  mod.rs  recent.rs  slot.rs  state.rs
src/loot/: block_registry.rs  mod.rs  table.rs
src/player/: camera.rs  components.rs  events.rs  mod.rs
src/server/: mod.rs
tests/: architecture_boundaries.rs  crafting_chain.rs  tag_definition.rs  world_generation.rs
tools/: generate_wood_textures.py  performance_baseline.ps1  ui_screenshot_check.ps1
(+717 files in other folders)
