[package]
name = "CenturyJourney"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = "1.52.3"
bevy = "0.19.0-rc.2"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
serde = { version = "1.0.228", features = ["derive"] }
# 噪声生成算法
noise = "0.9.0"
# 数据存储
bincode = "1.3.3"
flate2 = "1.1.9"
# 图形纹理
image = "0.25.10"
# UI
bevy_egui = "0.39.1"
# 音频
bevy_kira_audio = "0.26.0-rc.1"
# 网络
bevy_replicon = "0.40.2"
serde_arrays = "0.2.0"
serde_json = "1.0.150"
rand = "0.10.1"




# 为开发构建配置启用少量优化
[profile.dev]
opt-level = 1

# 为开发环境下的所有依赖库启用高强度优化
[profile.dev.package."*"]
opt-level = 3
