[package]
name = "century_journey"
version = "0.1.0"
edition = "2024"
description = "An early-stage single-player voxel sandbox prototype built with Rust and Bevy"
license = "MPL-2.0"
repository = "https://github.com/zimingYS/century_journey"
readme = "README.md"

[dependencies]
bevy = "0.19.0"
log = { version = "0.4.33", features = ["max_level_debug", "release_max_level_warn"] }
serde = { version = "1.0.228", features = ["derive"] }
# 噪声生成算法
noise = "0.9.0"
# 数据存储
bincode = "1.3.3"
flate2 = "1.1.9"
# 图形纹理
image = "0.25.10"
serde_arrays = "0.2.0"
serde_json = "1.0.150"
rand = "0.10.1"
anyhow = "1.0.102"

# 为开发构建配置启用少量优化
[profile.dev]
opt-level = 1

# 为开发环境下的所有依赖库启用高强度优化
[profile.dev.package."*"]
opt-level = 3
